--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
+<!Doctype html>
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Screen</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .login-container button:hover {
-            background-color: #218838;
-        }
-        .login-container .forgot-password {
-            display: block;
-            text-align: right;
-            margin-top: 10px;
-            font-size: 12px;
-            color: #007bff;
-            text-decoration: none;
-        }
-        .login-container .forgot-password:hover {
-            text-decoration: underline;
-        }
-    </style>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+	<link rel="stylesheet" href="styling/main.css">
+	<script src="javascript/main.js"></script>
+
+
+	<div class=pages>
+		<a href="index.html", class='pages'>home</a>
+		||
+		<a href="pythonpg.html", class='pages'>python</a>
+		|
+		<a href="tkinterpg.html", class='pages'>tkinter</a>
+		|
+		<a href="pagpg.html", class='pages'>pyautogui</a>
+		|
+		<a href="aboutpg.html", class='pages'>about</a>
+		|
+		<a href="sourcecd.html", class='pages'>source code</a>
+	</div>
+	
+
+
+	<hr>
+
+	<title>Docs</title>
+
+	<h1><u>Ellis's Python Documentation</u></h1>
+	<h1>Includes Python, HTML, Tkinter, TTK, Pyautogui</h1>
+
+	<hr>
+
 </head>
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-        </form>
-    </div>
 
-    <script>
-        // Prevent form submission
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            console.log("Button clicked, but nothing happens!");
-        });
-    </script>
+	<h1><u>Python</u></h1>
+
+	<h2><u>General-</u></h2>
+
+
+	<h3><u><b>Functions</b></u></h3>
+
+
+	<u><b>Printing-</b></u>
+
+	<p class='important'>
+		Printing is probably the most used thing in python, You can use it to talk to the user, You can use it to debug,<br>
+		You can use it to show what variables store at that point in the code and loads more, Its such a simple<br>
+		function to use, All you need is  > <b>print( )</b> <
+	</p>
+
+	Heres an example:
+
+	<br>
+
+	<img src="images/printexample1.png">
+
+	<br>
+	<br>
+	<br>
+
+	<u><b>Math/Equations-</b></u>
+
+	<p>
+		Knowing how to do math equations in python is very helpful for making useful programs, You can use it to add, divide,<br>
+		multiply and subtract variables, it's a very simple function. But, theres something you need to know,<br>
+		if you're new to computers you may think you multiply and divide by using 'x' and '÷', which is true in the real world,<br>
+		but not in python. Instead you need to use '*' and '/', these are the actual operators for multiplication and division.
+	</p>
+
+	Heres an example:
+
+	<br>
+
+	<img src="images/mathexample1.png">
+
+
+	<hr>
+
+	
+
+
+
 </body>
 </html>
