--- a/sourcecd.html
+++ b/sourcecd.html
@@ -25,7 +25,7 @@
 
 	<h1><u>Ellis's Python Documentation // Source Code</u></h1>
 
-	<a href="/images/guiexample1.png" download>Download File</a>
+	<a href="images/guiexample1.png" download>Download File 2</a>
 
 	<hr>
 
