--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <a href="pagpg.html">PyAutoGUI</a>
         <a href="aboutpg.html">About</a>
         <a href="sourcecd.html">Source Code</a>
+        <a href="game.html">Game</a>
     </div>
 
     <div class="container">
