--- a/base.html
+++ b/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styling/main.css">
     <script src="javascript/main.js"></script>
 
-    <title>Ellis's mega website</title>
+    <title>Base</title>
 
     <style>
         body {
@@ -87,8 +87,8 @@
         h2 {
             color: #16A085; /* Subheader color */
             font-size: 2em;
-            margin-top: 30px; /* Space above each subheader */
             text-align: center;
+            margin-top: 30px; /* Space above each subheader */
         }
 
         h3 {
@@ -164,32 +164,6 @@
     </div>
 
     <div class="container">
-        <h1>Ellis's Mega Website</h1>
-        <h2>Includes Python, HTML, Tkinter, Pyautogui</h2>
-        <h2>And Games</h2>
-    </div>
-
-    <div class="container">
-        <h3 class="important">Major update board</h3>
-        <ul>
-            <li>Added a tkinter tutorial</li>
-            <li>Redesigned the Python tutorial</li>
-            <li>Added an About Page</li>
-            <li>Added a Source Code Page</li>
-            <li>Redesigned most of the website</li>
-            <li>Added games</li>
-        </ul>
-    </div>
-
-    <div class="container">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac ligula varius nunc feugiat rutrum. Mauris finibus congue lacus. Etiam viverra mi ut lacinia tristique. In a neque et mauris congue tristique at eu libero. Sed tempus tempor tempor. Fusce felis sem, vulputate ac scelerisque vel, malesuada ut ligula. Nullam et sem molestie, ullamcorper est et, pulvinar tortor. 
-    </div>
-    <div class="container">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac ligula varius nunc feugiat rutrum. Mauris finibus congue lacus. Etiam viverra mi ut lacinia tristique. In a neque et mauris congue tristique at eu libero. Sed tempus tempor tempor. Fusce felis sem, vulputate ac scelerisque vel, malesuada ut ligula. Nullam et sem molestie, ullamcorper est et, pulvinar tortor. 
-    </div>
-
-    <div class="container">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac ligula varius nunc feugiat rutrum. Mauris finibus congue lacus. Etiam viverra mi ut lacinia tristique. In a neque et mauris congue tristique at eu libero. Sed tempus tempor tempor. Fusce felis sem, vulputate ac scelerisque vel, malesuada ut ligula. Nullam et sem molestie, ullamcorper est et, pulvinar tortor. 
     </div>
 
     <script>
