--- a/aboutpg.html
+++ b/aboutpg.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styling/main.css">
     <script src="javascript/main.js"></script>
 
-    <title>Tkinter Docs</title>
+    <title>About</title>
 
     <style>
         body {
@@ -158,23 +158,23 @@
     </div>
 
     <div class="container">
-        <h1>Python Basic Tutorial</h1>
-
-    	<div class="container">
-    		<h2>Introduction to Python</h2>
-    		Python is a versatile and powerful programming language known for its readability and simplicity. It's used in various fields, including web development, data analysis, artificial intelligence, and more.
-    	</div>
+        <h1>About</h1>
 
         <div class="container">
-    		<h2>Setting up python</h2>
-    		Before you start coding, ensure you have Python installed. You can download it from the official Python website. After installation, you can run Python scripts using the command line or an Integrated Development Environment (IDE) like PyCharm, VSCode, or Jupyter Notebook.
-    	</div>
+            <h3>How was it made?</h3>
+    	    Mostly ai, Lots of tries to get it right too
+        </div>
 
         <div class="container">
-    		<h2>Hello World!</h2>
-    		Let’s start with a classic example, printing "Hello, World!" to the console.
-    		<code>print("Hello, World!")</code>
-    	</div>
+            <h3>Whats the point?</h3>
+    	    Just tinkering, i had the idea ages ago but i had no way of making it public
+        </div>
+
+        <div class="container">
+            <h3>Whats in it?</h3>
+    	    Some ai generated turoials, games and possibly code
+        </div>
+
     </div>
 
     <script>
